bundles/mcp-multiple-backend/43-remote-route-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soloio-docs-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agw
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /search
      backendRefs:
      - name: soloio-docs-mcp-backend
        group: enterpriseagentgateway.solo.io
        kind: EnterpriseAgentgatewayBackend
